# ZapretGUI

./: .gitignore  CMakeLists.txt  README.md  configeditordialog.cpp  configeditordialog.h  configeditordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake-realese.yml  codeql.yml  test.yml
tests/: 2CMakeLists.txt  test_configeditordialog.cpp  test_mainwindow.cpp
zapret-win/blockcheck/: blockcheck.cmd
zapret-win/zapret-winws/: preset_russia.cmd  preset_russia_autohostlist.cmd  service_create.cmd  task_create.cmd
zapret/binaries/aarch64/: ip2net  mdig  nfqws  tpws
zapret/binaries/android-aarch64/: ip2net  mdig  nfqws  tpws
zapret/binaries/android-arm/: ip2net  mdig  nfqws  tpws
zapret/binaries/android-x86/: ip2net  mdig  nfqws  tpws
zapret/binaries/android-x86_64/: ip2net  mdig  nfqws  tpws
zapret/binaries/arm/: ip2net  mdig  nfqws  tpws
zapret/binaries/freebsd-x64/: dvtws  ip2net  mdig  tpws
zapret/binaries/lexra/: ip2net  mdig  nfqws  tpws
zapret/binaries/mac64/: ip2net  mdig  tpws
zapret/binaries/mips32r1-lsb/: ip2net  mdig  nfqws  tpws
zapret/binaries/mips32r1-msb/: ip2net  mdig  nfqws  tpws
zapret/binaries/mips64r2-msb/: ip2net  mdig  nfqws  tpws
zapret/binaries/ppc/: ip2net  mdig  nfqws  tpws
zapret/binaries/x86/: ip2net  mdig  nfqws  tpws
zapret/binaries/x86_64/: ip2net  mdig  nfqws  tpws  tpws_wsl.tgz
